--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -1,4 +1,4 @@
-<template name="Main">
+<template name="MainLayout">
   <header>
     <h1>my recipe book</h1>
     {{> loginButtons}}
@@ -6,4 +6,8 @@
   <main>
     {{> Template.dynamic template=main}}
   </main>
+</template>
+
+<template name="Test">
+  HELLO
 </template>
